--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -1,5 +1,5 @@
 
-all: forker miniget wait time parse_url
+all: forker miniget wait time parse_url masterd
 	date "+%d.%m.%Y %H:%M:%S" > build
 
 check: forker
@@ -20,6 +20,9 @@ time: time.c
 parse_url: parse_url.c nanourl.c nanourl.h
 	gcc parse_url.c nanourl.c -o parse_url
 
+masterd: masterd.c nanoini.o nanostr.o
+	gcc masterd.c nanoini.o nanostr.o -o masterd
+
 nanoini.o: nanoini.c nanoini.h
 	gcc -c nanoini.c
 
@@ -29,4 +32,4 @@ nanostr.o: nanostr.c nanostr.h
 clean:
 	rm -f *.o
 	rm -f build
-	rm -f forker miniget wait time parse_url
+	rm -f forker miniget wait time parse_url masterd
