--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -1,7 +1,7 @@
 
 srcdir = .
 
-all: forker miniget wait time parse_url masterd nsu streams
+all: forker miniget wait time parse_url masterd nsu streams miniget2
 	date "+%d.%m.%Y %H:%M:%S" > build
 
 check: forker
@@ -12,6 +12,9 @@ forker: forker.c
 
 miniget: miniget.c nanourl.h nanourl.c
 	gcc miniget.c nanourl.c -o miniget
+
+miniget2: miniget.cpp socket.o http.o nanourl.c nanostr.c nanostr.h
+	gcc miniget.cpp nanourl.c nanostr.c socket.o http.o -lstdc++ -I$(srcdir) -o miniget2
 
 wait: wait.c
 	gcc wait.c -o wait
@@ -37,10 +40,19 @@ nanoini.o: nanoini.c nanoini.h
 nanostr.o: nanostr.c nanostr.h
 	gcc -c nanostr.c
 
+nanourl.o: nanourl.c nanourl.h
+	gcc -c nanourl.c
+
 fstream.o: fstream.cpp nanosoft/stream.h nanosoft/fstream.h
 	gcc -c fstream.cpp -I$(srcdir)
+
+socket.o: socket.cpp nanosoft/stream.h nanosoft/socket.h
+	gcc -c socket.cpp -I$(srcdir)
+
+http.o: http.cpp nanosoft/stream.h nanosoft/socket.h nanourl.h
+	gcc -c http.cpp -I$(srcdir)
 
 clean:
 	rm -f *.o
 	rm -f build
-	rm -f forker miniget wait time parse_url masterd nsu streams
+	rm -f forker miniget wait time parse_url masterd nsu streams miniget2
