--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -1,7 +1,7 @@
 
 srcdir = .
 
-all: forker miniget wait time parse_url masterd nsu streams miniget2
+all: forker miniget wait time parse_url masterd nsu streams miniget2 options libnanosoft.a
 	date "+%d.%m.%Y %H:%M:%S" > build
 
 check: forker
@@ -13,8 +13,8 @@ forker: forker.c
 miniget: miniget.c nanourl.h nanourl.c
 	gcc miniget.c nanourl.c -o miniget
 
-miniget2: miniget.cpp socket.o http.o nanourl.c nanostr.c nanostr.h
-	gcc miniget.cpp nanourl.c nanostr.c socket.o http.o -lstdc++ -I$(srcdir) -o miniget2
+miniget2: miniget.cpp libnanosoft.a
+	gcc miniget.cpp -lnanosoft -lstdc++ -L$(srcdir) -I$(srcdir) -o miniget2
 
 wait: wait.c
 	gcc wait.c -o wait
@@ -34,6 +34,12 @@ nsu: nsu.c
 streams: streams.cpp fstream.o
 	gcc streams.cpp fstream.o -o streams -I${srcdir} -lstdc++
 
+options: options.o options_test.cpp
+	gcc options.o options_test.cpp -I$(srcdir) -lstdc++ -o options
+
+libnanosoft.a: nanoini.o nanostr.o nanourl.o options.o fstream.o socket.o http.o
+	ar rc libnanosoft.a nanoini.o nanostr.o nanourl.o options.o fstream.o socket.o http.o
+
 nanoini.o: nanoini.c nanoini.h
 	gcc -c nanoini.c
 
@@ -42,6 +48,9 @@ nanostr.o: nanostr.c nanostr.h
 
 nanourl.o: nanourl.c nanourl.h
 	gcc -c nanourl.c
+
+options.o: options.cpp nanosoft/options.h
+	gcc -c options.cpp -I$(srcdir)
 
 fstream.o: fstream.cpp nanosoft/stream.h nanosoft/fstream.h
 	gcc -c fstream.cpp -I$(srcdir)
@@ -55,4 +64,4 @@ http.o: http.cpp nanosoft/stream.h nanosoft/socket.h nanourl.h
 clean:
 	rm -f *.o
 	rm -f build
-	rm -f forker miniget wait time parse_url masterd nsu streams miniget2
+	rm -f forker miniget wait time parse_url masterd nsu streams miniget2 libnanosoft.a options
