костыль: под виндой юзать устаревший gethostbyname вместо getaddrinfo

--- a/trunk/src/include/nanosoft/config.h.in
+++ b/trunk/src/include/nanosoft/config.h.in
@@ -2,3 +2,20 @@
 #undef HAVE_GAI_STRERROR
 #undef UNIX
 #undef WINDOWS
+
+
+///////////////////////////////////////////////////////////////////////////
+
+#ifdef WINDOWS
+
+#undef USE_GETADDRINFO
+
+#endif
+
+///////////////////////////////////////////////////////////////////////////
+
+#ifdef UNIX
+
+#define USE_GETADDRINFO
+
+#endif
